=head1 ACKNOWLEDGEMENTS

Extra Thanks to:

Andreas Koenig <andreas.koenig@franz.ww.tu-berlin.de>
for *lots* of bug spotting, fixing and patching, 
Apache::Registry and CGI.pm overhaul efforts (aka CGI::XA &
CGI::Switch) 

Gisle Aas <aas@sn.no>
For getting this effort started and many contributions since 

Other contributors are mentioned below.

=head1 CHANGES

=over 3

=item 1.10_01-dev

1.3b6 compat:
- deal with ap_ API prefixing
- t/modules/embperl will warn on failure:
>>> NOTE: Be sure to rebuild HTML::Embperl against Apache 1.3b6+
>>> Try 'make test' again after doing so.

experimental: #ifdef PERL_OBJECT_HANDLERS, mod_perl will thaw objects
from Perl*Handler strings such as `$Global::Object->method'

$r->custom_response will now work under win32 with 1.3b6-dev+

added win32 test enhancements suggested by Gerald Richter

added mod_perl_cvs.pod document

=item 1.10 - March 21, 1998

rid of SEGV in PerlChildExitHandler spotted by Eric Cholet 

#ifdef USE_THREADS, don't hard_timeout/kill_timeout, SIGALRM causes hangage

=item 1.09 - March 19, 1998

rid of stupid "can't bootstrap Apache::Constants outside of httpd" message

added r->content_languages method

added htdocs/manual/mod/mod_perl.html (generated from Apache::ModuleDoc)

now support <Perl> under win32 (requires 1.3b6-dev+)

PerlChildExitHandler is now implemented via register_cleanup() rather
than the module child_exit hook (which might go away!)

support Apache::Constants tags `override' and `args_how', for Apache::Module

'make test' will now work again under win32

applied Apache::Symbol/Apache::StatINC patches from Chris Dean

fixed bug in Makefile.PL that would tack `aix' onto INCDIR w/ apache
1.2.x, spotted by Mike Klein

removed uneeded check for HTTP_AUTHORIZATION from perl_setup_env()

fixup perl_section_self_boot so it doesn't try to read config
if keys %Apache::ReadConfig:: < 1

perl_section_self_boot thang will now work w/ PerlRequire'd files too
