@@ -27,6 +27,7 @@ lib/Apache/httpd_conf.pm
 lib/Apache/fork.pm
 lib/Apache/test.pm
 lib/Apache/Debug.pm
+lib/Apache/ExtUtils.pm
 lib/Apache/FakeRequest.pm
 lib/Apache/Options.pm
 lib/Apache/PerlSections.pm
@@ -36,8 +37,6 @@ lib/Apache/Resource.pm
 #lib/Apache/Safe.pm
 lib/Apache/SIG.pm
 lib/Apache/StatINC.pm
-src/Makefile.tmpl
-src/Makefile.tmpl-Ben-SSL
 Apache/Apache.pm
 Apache/typemap
 Apache/Makefile.PL
